<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ManulifeTest</string>
    <string name="open">Open</string>
    <string name="quit">Quit</string>
    <!-- Title bar  -->
    <string name="listofaccount">Account Lists</string>
    <string name="chequeacchistory">ChequeAccHistory</string>
    <string name="savingacchistory">SavingAccHistory</string>
    <string name="tfsaacchistory">TFSAAccHistory</string>
    <string name="action_settings">Settings</string>
    <string name="banner_account">ACCOUNT</string>
    <string name="banner_accnum">ACCOUNT NUMBER</string>
    <!-- history list title -->
    <string name="banner_date">DATE</string>
    <string name="banner_decription">DESCRIPTION</string>
    <string name="banner_withdrawal">WITHDRAWALS</string>
    <string name="banner_deposit">DEPOSIT</string>
    <string name="banner_balance">BALANCE</string>

</resources>
